// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter should renders default 1`] = `
<styled.div>
  <styled.button
    disabled={true}
  >
    -
  </styled.button>
  <styled.input
    maxLength={2}
    type="text"
    value={1}
  />
  <styled.button
    disabled={false}
  >
    +
  </styled.button>
</styled.div>
`;

exports[`Counter should renders with custom value 1`] = `
<styled.div>
  <styled.button
    disabled={false}
  >
    -
  </styled.button>
  <styled.input
    maxLength={2}
    type="text"
    value={10}
  />
  <styled.button
    disabled={false}
  >
    +
  </styled.button>
</styled.div>
`;

exports[`Counter should renders with max value 1`] = `
<styled.div>
  <styled.button
    disabled={false}
  >
    -
  </styled.button>
  <styled.input
    maxLength={2}
    type="text"
    value={25}
  />
  <styled.button
    disabled={true}
  >
    +
  </styled.button>
</styled.div>
`;
